# headless_flutter

./: .gitignore  README.md  pubspec.yaml
clib/: CMakeLists.txt  build.bat  build.sh  main.c
clib/lib/macos-arm64/FlutterEmbedder.framework/Versions/A/Resources/: Info.plist
clib/lib/windows-x64/: flutter.version.json  flutter_engine.dll.lib
lib/: headless_render.dart  main.dart
lib/src/: headless_flutter_view.dart  headless_material_app.dart  headless_render.dart  size_reporting_widget.dart
test/: debug_main_test.dart  widget_test.dart
test/src/: create_image_test.dart
